2017-05-24 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-664

	WORK IN PROGRESS. Towards a more robust RT4. Can break controlfiles.
	
	* src/m_rt4.cc, methods.cc (RT4Clc*),
	src/rt4.cc,h (run_rt4, sca_optpropCalc):
	After misuse by experts, removed pfct_threshold as user parameter,
	but hardcoded to a value that proofed to make sense. Instead, allow
	internal automatic increase of number of streams in order to have the
	scattering matrix being able to properly reproduce the expected norm.
	Done individually per frequency.
	
2017-05-24  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-663

	* src/m_cloudradar.cc (iyCloudRadar): A small first step towards
	supporting Jacobians.

	* src/montecarlo.cc (pha_mat_singleCalcScatElement)
	(pha_mat_singleCalc): The old pha_mat_singleCalc was seperated into
	two functions, to make it possible to also obtain the phase
	function for each scattering element without duplication of code.

2017-05-23  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-662

	* src/m_fos.cc (iyHybrid): A bit more ...

	* src/m_rte.cc (iyEmissionStandard):
	* src/m_transmitter.cc (iyRadioLink, iyTransmissionStandard): Just
	formatting changes.

2017-05-23  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-661

	* src/m_fos.cc (iyHybrid): Some small steps forward ...

2017-05-23  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-660

	* CMakeLists.txt, config.h.cmake, src/CMakeLists.txt, src/m_oem.cc,
	src/main.cc:

	Separate C++11 support from OEM support. Before, C++11 support had to
	be forcibly disabled for clang because invlib doesn't compile with it.
	Now, only OEM, not C++11, is disabled by default if clang is used.
	It can be reenabled for testing with clang with -DENABLE_OEM=1 .

	* CMakeLists.txt, README:

	Add support for ccache (-DENABLE_CCACHE=1). https://ccache.samba.org/

	* src/array.h: Add std:: before fill calls.

2017-05-23  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-659