@@ -101,11 +101,15 @@ void run_rt4( Workspace& ws,
               ConstComplexVectorView ground_index,
               ConstTensor5View surf_refl_mat,
               ConstTensor3View surf_emis_vec,
+              const Agenda& surface_rtprop_agenda,
+              const Numeric& surf_altitude,
               const String& quad_type,
               ConstVectorView scat_za_grid,
               Vector& mu_values,
               ConstVectorView quad_weights,
               const Index& auto_inc_nstreams,
+              const Index& za_interp_order,
+              const Index& cos_za_interp,
               const String& pfct_method,
               const Index& pfct_aa_grid_size,
               const Numeric& pfct_threshold,
